# Wenet-Based-Realtime-ASRFrame-Demo

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/src/: web_server.py
backend/src/audio_queue/: __init__.py  audio_task_queue.py  task.py  windowing.py
backend/src/preprocess/: __init__.py  audio_enhance.py  pipeline.py  types.py
backend/src/preprocess/steps/: __init__.py  base.py  dc_remover.py  limiter.py  noise_reducer.py  normalize_rms.py  pre_emphasis.py  registry.py  vad_streamer.py
backend/src/protocols/: __init__.py  messages.py  status.py
backend/src/runtime/: __init__.py  ingress.py
backend/src/static/: index.html
backend/src/transcription/: __init__.py  subprocess_backend.py  wenet_transcriber.py  worker.py
backend/src/utils/: __init__.py  audio_utils.py
backend/tests/: test_web_server_lifespan.py
backend/tests/preprocess/: test_pipeline.py  test_steps_vad_segmenter.py
backend/wenet/runtime/web/: app.py
backend/wenet/wenet/cli/: hub.py
backend/wenet/wenet/models/squeezeformer/: conv2d.py
docs/: future-plans.md  project-upgrade-hints.md
docs/superpowers/specs/: 2026-06-01-wenet-subprocess-backend-design.md
frontend/: index.html  package-lock.json
frontend/src/: App.vue  router.js  style.css
frontend/src/components/: WaveformCanvas.vue
frontend/src/views/: History.vue  Home.vue
